添加评论功能 同时 修复缓存逻辑